# TimmiPay_Backend

./: CMakeLists.txt  Doxyfile.project  Doxyfile.tests  README.md  docker-compose.yml  init.sql  postgres-config.json  redis_config.json  requirements.txt  start.txt
auth_service/cmd/: main.cpp
auth_service/internal/models/: user.h
cmd/: main.cpp
database_config/: prod_postgres_config.json  prod_redis_config.json  test_postgres_config.json  test_redis_config.json
docs/project/html/: account_8h_source.html  annotated.html  annotated_dup.js  api__methods_8h_source.html  auth__service_2internal_2auth_2user__verify_2verification_2user__verify_8h_source.html  auth__service_2internal_2server_2db__init_2db__init_8h_source.html  classFinanceServer-members.html  classFinanceServer.html  classFinanceServer.js  classFinanceService-members.html  classFinanceService.html  classFinanceService.js  classSessionHold-members.html  classSessionHold.html  classSessionHold.js  classSessionStart-members.html  classSessionStart.html  classSessionStart.js  classSessionVerifier-members.html  classSessionVerifier.html  classSessionVerifier.js  classTokenGenerator-members.html  classTokenGenerator.html  classTokenGenerator.js  classUUIDGenerator-members.html  classUUIDGenerator.html  classUUIDGenerator.js  classUserStorage-members.html  classUserStorage.html  classUserStorage.js  classUserVerifier-members.html  classUserVerifier.html  classUserVerifier.js  classes.html  config_8h_source.html  config__redis_8h_source.html  connect_8h_source.html  connect__redis_8h_source.html  crow__app_8h_source.html  currency_8h_source.html  (+117 more)
docs/project/latex/: account_8h_source.tex  annotated.tex  api__methods_8h_source.tex  auth__service_2internal_2auth_2user__verify_2verification_2user__verify_8h_source.tex  auth__service_2internal_2server_2db__init_2db__init_8h_source.tex  classFinanceServer.tex  classFinanceService.tex  classSessionHold.tex  classSessionStart.tex  classSessionVerifier.tex  classTokenGenerator.tex  classUUIDGenerator.tex  classUserStorage.tex  classUserVerifier.tex  config_8h_source.tex  config__redis_8h_source.tex  connect_8h_source.tex  connect__redis_8h_source.tex  crow__app_8h_source.tex  currency_8h_source.tex  dependencies_8h_source.tex  files.tex  finance__app_8h_source.tex  finance__manager_2internal_2server_2db__init_2db__init_8h_source.tex  finance__service_8h_source.tex  md_README.tex  redis__set__token_8h_source.tex  refman.tex  server_8h_source.tex  session__auth__endpoint_8h_source.tex  session__hold_8h_source.tex  session__refresh__endpoint_8h_source.tex  session__start_8h_source.tex  session__verify_8h_source.tex  start__server_8h_source.tex  storage_2user__verify_2auth_2user__verify_8h_source.tex  structAccount.tex  structConfig.tex  structConfigRedis.tex  structCurrency.tex  (+8 more)
docs/tests/html/: annotated.html  annotated_dup.js  classApiServerFixture-members.html  classApiServerFixture.html  classConnectRedisTest-members.html  classConnectRedisTest.html  classConnectRedisTest.js  classCrowAppServerFixture-members.html  classCrowAppServerFixture.html  classDatabaseConnectionIntegrationTest-members.html  classDatabaseConnectionIntegrationTest.html  classDatabaseConnectionIntegrationTest.js  classFinanceServiceTest-members.html  classFinanceServiceTest.html  classFinanceServiceTest.js  classMockSessionHold-members.html  classMockSessionHold.html  classMockSessionHold.js  classMockSessionStart-members.html  classMockSessionStart.html  classMockSessionStart.js  classProdSessionHoldTest-members.html  classProdSessionHoldTest.html  classProdSessionHoldTest.js  classProdSessionTest-members.html  classProdSessionTest.html  classProdSessionTest.js  classRealSessionHold-members.html  classRealSessionHold.html  classRealSessionHold.js  classRealSessionStart-members.html  classRealSessionStart.html  classRealSessionStart.js  classRedisSetTokenTest-members.html  classRedisSetTokenTest.html  classRedisSetTokenTest.js  classServerTest-members.html  classServerTest.html  classServerTest.js  classSessionAuthEndpointTest-members.html  (+61 more)
docs/tests/html/search/: all_1.js  (+26 more)
docs/tests/latex/: annotated.tex  classApiServerFixture.eps  classApiServerFixture.tex  classConnectRedisTest.eps  classConnectRedisTest.tex  classCrowAppServerFixture.eps  classCrowAppServerFixture.tex  classDatabaseConnectionIntegrationTest.eps  classDatabaseConnectionIntegrationTest.tex  classFinanceServiceTest.eps  classFinanceServiceTest.tex  classMockSessionHold.eps  classMockSessionHold.tex  classMockSessionStart.eps  classMockSessionStart.tex  classProdSessionHoldTest.eps  classProdSessionHoldTest.tex  classProdSessionTest.eps  classProdSessionTest.tex  classRealSessionHold.eps  classRealSessionHold.tex  classRealSessionStart.eps  classRealSessionStart.tex  classRedisSetTokenTest.eps  classRedisSetTokenTest.tex  classServerTest.eps  classServerTest.tex  classSessionAuthEndpointTest.eps  classSessionAuthEndpointTest.tex  classSessionHoldAccessor.eps  classSessionHoldAccessor.tex  classSessionRefreshEndpointTest.eps  classSessionRefreshEndpointTest.tex  classStartServerTest.eps  classStartServerTest.tex  classTokenGeneratorTest.eps  classTokenGeneratorTest.tex  classUserStorageProdTest.eps  classUserStorageProdTest.tex  classUserVerifierTest.eps  (+3 more)
finance_manager/cmd/: main.cpp
finance_manager/internal/app/: finance_app.cpp  finance_app.h  finance_app_test.cpp
finance_manager/internal/finance/: finance_app_test.cpp  finance_service.cpp  finance_service.h  finance_service_test.cpp
internal/models/: user.h
internal/uuid_generator/: uuid_generator.cpp  uuid_generator.h  uuid_generator_test.cpp
storage/config/: config.cpp  config.h  config_test.cpp
storage/postgres_connect/: connect.cpp  connect.h  connect_test.cpp
storage/redis_config/: config_redis.cpp  config_redis.h  config_redis_test.cpp
storage/redis_connect/: connect_redis.cpp  connect_redis.h  connect_redis_test.cpp
storage/session_verify/: session_verify.cpp  session_verify.h
uuid_generator/: uuid_generator.cpp  uuid_generator.h  uuid_generator_test.cpp
(+160 files in other folders)
